2008-12-09  Jan Hubicka  <jh@suse.cz>

	* predict.c (estimate_bb_frequencies): Fix test if profile is present.

2008-12-09  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/35468
	* tree-ssa-ccp.c (fold_stmt_r): Don't fold reads from constant
	string on LHS.

2008-12-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38445
	* tree-ssa-structalias.c (emit_pointer_definition): Only visit
	names once.
	(emit_alias_warning): Adjust.

2008-12-09  Andrew Haley  <aph@redhat.com>

	* fixed-value.c (do_fixed_add): Add comment.
	* tree-ssa-loop-ivopts.c (iv_ca_cost): Likewise.
	* builtins.c (fold_builtin_sqrt): Likewise.

2008-12-09  Kai Tietz  <kai.tietz@onevision.com>

	PR/38366
	* function.c (aggregate_value_p): Get fntype from CALL_EXPR in any
	case.
	* calls.c (nitialize_argument_information): Add fntype argument 
	and use it for calls.promote_function_args.
        (expand_call): Pass fntype to aggregate_value_p if no fndecl
	available and pass additional fntype to
	initialize_argument_information.
	* config/i386/i386.c (ix86_reg_parm_stack_space): Remove cfun part
	to get function abi type.
	(init_cumulative_args): Use for abi kind detection fntype, when no
	fndecl is available.

2008-12-09  Andreas Krebbel  <krebbel1@de.ibm.com>

	* config/s390/s390.md (movti, movdi_64, movdi_31,
	  *movsi_zarch, *movhi, *movqi, *mov<mode>_64, *mov<mode>_31,
	  *mov<mode>_64dfp, *mov<mode>_64, *mov<mode>_31, mov<mode>): Remove
	  Q->Q alternative.
	  (Integer->BLKmode splitter): Removed.

2008-12-08  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.c (alpha_set_memflags): Process memory
	references in full insn sequence.

2008-12-09  Jason Merrill  <jason@redhat.com>

	PR c++/38410
	* gimplify.c (gimplify_init_constructor): Don't write out a static
	copy of the CONSTRUCTOR for TREE_ADDRESSABLE types or small sparse
	initializers.

2008-12-09 Tobias Grosser  <grosser@fim.uni-passau.de>

	PR middle-end/38084
	Fix testsuite/gfortran.dg/graphite/id-3.f90.